# utf8simd

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: utf8simd.rs
examples/: advanced.rs  simple.rs
src/: error.rs  lib.rs  utf8.rs  validator.rs
src/simd/: aarch64.rs  mod.rs  portable.rs  x86.rs
